--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,3 +1,5 @@
+@use 'components/variables';
+
 .hero{
     padding: 90px 0 100px;
     background-image: url(../images/fundo.png);
@@ -15,7 +17,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(#000, .7);
+        background-color: rgba(variables.$textColor2, .7);
         content: '';
     }
 
