--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
     font-family: Roboto, sans-serif;
     color: variables.$textColor1;
     list-style: none;
+    overflow-x: hidden;
 }
 
 .container{
